RESOLVED FIXED62383
[Chromium] Overlay scrollbars leave glitches on web content
https://bugs.webkit.org/show_bug.cgi?id=62383
Summary [Chromium] Overlay scrollbars leave glitches on web content
Sailesh Agrawal
Reported 2011-06-09 10:22:48 PDT
Scrolling a page with overlay scrollbars leaves trailing artifacts on web content. This needs to be fixed before overlay scrollbars are enabled.
Attachments
Patch (3.54 KB, patch)
2011-06-14 17:30 PDT, Sailesh Agrawal
no flags
Patch (5.58 KB, patch)
2011-06-14 18:29 PDT, Sailesh Agrawal
no flags
Patch (3.30 KB, patch)
2011-06-15 15:13 PDT, Sailesh Agrawal
no flags
Sailesh Agrawal
Comment 1 2011-06-14 17:30:07 PDT
Sailesh Agrawal
Comment 2 2011-06-14 17:30:57 PDT
This doesn't fix the root cause, any suggestions appreciated.
Sailesh Agrawal
Comment 3 2011-06-14 18:29:52 PDT
Nico Weber
Comment 4 2011-06-14 18:35:41 PDT
Comment on attachment 97213 [details] Patch don't set r? on work-in-progress patches
James Robinson
Comment 5 2011-06-14 18:38:36 PDT
Comment on attachment 97213 [details] Patch How does the PLATFORM(MAC) port handle this in the non-composited case? Whatever the answer is here it does not belong in ScrollView.cpp
Sailesh Agrawal
Comment 6 2011-06-14 20:02:30 PDT
(In reply to comment #5) > (From update of attachment 97213 [details]) > How does the PLATFORM(MAC) port handle this in the non-composited case? I think that on PLATFORM(MAC) this is handled by the native host scroll view. Our RenderWidget just blindly copies the scrollrect even for overlay scrollbars. > Whatever the answer is here it does not belong in ScrollView.cpp What do you think of fixing this in RenderWidget. This would be a little more complicated because I'd have to pipe more information about scrollbars to RenderWidget.
Nico Weber
Comment 7 2011-06-14 20:06:54 PDT
sail: What was the file where you removed the ?: earlier today? Did that help?
Sailesh Agrawal
Comment 8 2011-06-14 20:27:05 PDT
(In reply to comment #7) > sail: What was the file where you removed the ?: earlier today? Did that help? That was in ScrollView.cpp ScrollView::rectToCopyOnScroll(). Changing it didn't help.
James Robinson
Comment 9 2011-06-14 20:44:17 PDT
The mac port doesn't use platform widgets for scrolling in WebKit2
Sailesh Agrawal
Comment 10 2011-06-14 20:47:46 PDT
(In reply to comment #9) > The mac port doesn't use platform widgets for scrolling in WebKit2 Hm... how can I tell if I'm running Safar in composited or non-composited mode? Maybe they have this bug too.
Sailesh Agrawal
Comment 11 2011-06-15 15:13:25 PDT
Sailesh Agrawal
Comment 12 2011-06-15 15:14:39 PDT
(In reply to comment #9) > The mac port doesn't use platform widgets for scrolling in WebKit2 K, I think I got it. WebChromeClient::scroll() intersects the scroll rect with the clip rect. This excludes the scrollbars when overlay scrollbars are enabled. I'm running try bots now.
James Robinson
Comment 14 2011-06-15 17:41:50 PDT
What about the layout tests trybots? (mac_layout, win_layout, linux_layout and the same with _rel for release).
Sailesh Agrawal
Comment 15 2011-06-15 17:45:23 PDT
(In reply to comment #14) > What about the layout tests trybots? (mac_layout, win_layout, linux_layout and the same with _rel for release). Damn, forgot. Layout try bots pending.
Sailesh Agrawal
Comment 17 2011-06-15 22:08:22 PDT
Mihai Parparita
Comment 18 2011-06-16 13:24:09 PDT
Comment on attachment 97369 [details] Patch Rubber-stamping since James is out.
WebKit Review Bot
Comment 19 2011-06-16 14:18:49 PDT
Comment on attachment 97369 [details] Patch Clearing flags on attachment: 97369 Committed r89065: <http://trac.webkit.org/changeset/89065>
WebKit Review Bot
Comment 20 2011-06-16 14:18:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.